--- a/starter-code/css pages/app-design.css
+++ b/starter-code/css pages/app-design.css
@@ -474,58 +474,86 @@ hr {
     } 
 
     .project-container {
-        /* position: relative; */
         top: 0;
         width: 43.125rem;
         height: 21.875rem;
     }
-    /*
-    .gig {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .get-touch {
-        width: 9.5rem;
-        height: 3.5rem;
-        position: relative;
-        top: 7rem;
-        float: right;
-        margin-right: 5rem;
-        border-radius: .5rem;
-        border: none;
-        -webkit-border-radius: .5rem;
-        -moz-border-radius: .5rem;
-        -ms-border-radius: .5rem;
-        -o-border-radius: .5rem;
-    }
-
-    .get-touch:hover {
-        background-color: var(--secondary-color-light-peach);
-        color: var(--primary-color-white);
-        cursor: pointer;
-    }
-
+    
     .project {
-        position: relative;
-        top: 5rem;
-        margin-inline: 10%;
+        top: 3rem;
+        width: 35.813rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
-
+    
     .project h1 {
-        font-size: var(--heading-2-font-size);
-        font-weight: var(--heading-2-font-weight);
-        color: var(--primary-color-white);
-        line-height: 40px;
-        width: 268px;
+        text-align: center;
     }
 
     .project h2 {
+        text-align: center;
+        width: 27rem;
+    } 
+    
+    .get-touch {
+        position: absolute;
+         top: 15rem;
+         left: 17rem;
+    }
+    
+    footer {
+        width: 100%;
+        height: 500px;
+        background-color: var(--primary-color-black);
+        position: relative;
+        bottom: 5rem;
+        z-index: -1;
+    }
+    
+    hr {
+        width: 690px;
+        margin: -30px auto 50px;
+        opacity: 0.1;
+    }
+
+    .container {
+        width: 43rem;
+        margin: 0 auto;
+        border: 1px solid white;
+        /* font-size: var(--main-font-size); */
+        line-height: 2rem;
+    }
+
+    .container-direction h1 {
         font-size: var(--main-font-size);
-        color: var(--primary-color-white);
-        font-weight: var(--heading-1-font-weight);
-        line-height: 26px;
-        margin-top: 1rem;
-        width: 459px;
+        font-weight: var(--heading-2-font-weight);
+    }
+
+    .container-direction h2 {
+        font-size: var(--main-font-size);
+        font-weight: 300;
+    }
+
+    .container-contact h1 {
+        font-size: var(--main-font-size);
+        font-weight: var(--heading-2-font-weight);
+    }
+
+    .container-contact h2 {
+        font-size: var(--main-font-size);
+        font-weight: var(--heading-2-font-weight);
+    }
+/*
+    .footer-icons {
+        width: 10rem;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 45px;
+    }
+
+    .footer-icons img {
+        width: 15px;
     } */
 }
