--- a/starter-code/css pages/web_design.css
+++ b/starter-code/css pages/web_design.css
@@ -50,6 +50,10 @@ main {
   height: 100%;
 }
 
+.mob-open, .mob-close{
+  display: none;
+}
+
 /* Styles for the navigation */
 nav, .contact {
   width: 69.438rem;
@@ -424,7 +428,7 @@ nav, .contact {
 /* Styles for the footer */
 footer {
   width: 100%;
-  height: 393px;
+  height: 450px;
   background-color: var(--primary-color-black);
 }
 
@@ -507,6 +511,10 @@ hr {
 
 @media screen and (max-width: 768px) and (min-width: 480px) 
 {
+  .mob-open, .mob-close{
+    display: none;
+  }
+
   .logo{
     margin-left: 15px;
   }
@@ -553,13 +561,13 @@ hr {
 }
 
 .grid-item-container{
-  height: 320px;
-  width: 690px;
+  height: 200px;
+  width: 689px;
 }
 
 .grid-item-container-container{
-  height: 320px;
-  width: 690px;
+  height: 200px;
+  width: 689px;
   margin-top: 24px;
 }
 .express{
@@ -574,7 +582,7 @@ hr {
 }
 
 .project-container{
-  margin-top: 18rem;
+  margin-top: 120px;
   width: 690px;
 }
 
@@ -594,6 +602,7 @@ hr {
 
 hr{
   width: 690px;
+  opacity: 0.1;
 }
 
 .container{
@@ -627,8 +636,44 @@ footer{
 }
 
 @media screen and (max-width: 480px) and (min-width: 280px) {
+  /* .link{
+    display: none;
+  } */
+
   .link{
     display: none;
+  }
+
+  .mob-open{
+    display: flex;
+  }
+
+  .mob-menu{
+    height: 1rem;
+  }
+
+  .link a{
+    color: var(--primary-color-white);
+    display: block;
+    position: relative;
+    top: 48px;
+    margin: 0 auto;
+    width: 320px;
+    height: 50px;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 25px;
+    letter-spacing: 2px;
+  }
+
+  .link{
+    position: absolute;
+    top:150px;
+    right: 0rem;
+    width: 100%;
+    height: 235px;
+    background: var(--primary-color-black);
+    z-index: 1;
   }
 
   nav{
@@ -696,7 +741,7 @@ footer{
   }
 
   .project-container{
-    top: 12rem;
+    top: 14rem;
     width: 327px;
     height: 379px;
 }
@@ -729,18 +774,25 @@ footer{
 }
 
   footer{
-    height: 700px;
+    height: 788px;
   }
 
   hr{
     position: relative;
-    margin-top: -3rem;
+    margin-top: -4rem;
     width: 327px;
+    left: 1.5rem;
+    opacity: 0.1;
   }
   
   .links-link{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     position: relative;
-    top: 3rem;
+    top: 5rem;
+    left: 1rem;
+    height: 100px;
   }
 
   .contact{
@@ -753,11 +805,17 @@ footer{
   .container{
     width: 315px;
     display: block;
+    position: relative;
+    left: 1.5rem;
     text-align: center;
-    margin-top: 10rem;
+    margin-top: 12rem;
   }
   .container-contact{
     margin-top: 2rem;
+  }
+
+  .foot{
+    padding-top: 10rem;
   }
 
   .foot-container{
@@ -771,6 +829,7 @@ footer{
   .footer-icons{
     position: relative;
     left: 5rem;
+    top: -1rem;
   }
 
 }
