--- a/starter-code/css pages/app-design.css
+++ b/starter-code/css pages/app-design.css
@@ -232,7 +232,7 @@ nav {
     width: 33.813rem;
     border-radius: 15px;
 }
-.page-tab {
+.page-tab, .page-mob {
     display: none;
 }
 
@@ -426,7 +426,7 @@ hr {
         margin: 0 auto;
         grid-template-columns: auto;
         margin-bottom: 5rem;
-        /* border: 1px solid black;         */
+        gap: 3rem;
     }
     
     .box {
@@ -450,6 +450,7 @@ hr {
     .pages {
         width: 43rem;
         grid-template-columns: auto;
+        gap: 3rem;
     }
     
     .image-container {
@@ -457,7 +458,7 @@ hr {
         width: 43rem;
     }
 
-    .page1 {
+    .page1, .page-mob {
         display: none;
     }
     
@@ -474,7 +475,7 @@ hr {
     } 
 
     .project-container {
-        top: 0;
+        top: 5rem;
         width: 43.125rem;
         height: 21.875rem;
     }
@@ -508,7 +509,6 @@ hr {
         height: 500px;
         background-color: var(--primary-color-black);
         position: relative;
-        bottom: 5rem;
         z-index: -1;
     }
     
@@ -521,8 +521,6 @@ hr {
     .container {
         width: 43rem;
         margin: 0 auto;
-        border: 1px solid white;
-        /* font-size: var(--main-font-size); */
         line-height: 2rem;
     }
 
@@ -545,15 +543,95 @@ hr {
         font-size: var(--main-font-size);
         font-weight: var(--heading-2-font-weight);
     }
-/*
-    .footer-icons {
-        width: 10rem;
-        display: flex;
-        justify-content: space-between;
-        margin-top: 45px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    nav {
+        width: 23.438rem;
+        margin: 2.188rem auto 2.188rem auto;
+        border: 1px solid black;
+        padding: 0 1rem;
     }
 
-    .footer-icons img {
-        width: 15px;
-    } */
+    .app-section {
+        width: 100%;
+        height: 20rem;
+        border-radius: 0;
+        margin-bottom: 10rem;
+        /* overflow: ; */
+    }
+
+    .app-div {
+        width: 20.5rem;
+        margin: 5rem auto;
+    }
+
+    .app-div h1 {
+        font-size: 32px;
+    }
+
+    .app-div p {
+        font-size: 15px;
+    }
+
+    .el {
+        left: -25rem;
+        bottom: 28rem;
+    }
+    
+    .circ {
+        display: none;
+    }
+    
+    .stuff {
+        position: relative;
+        width: 20.5rem;
+        margin: -3rem auto;
+        grid-template-columns: auto;
+        margin-bottom: 6rem;
+        gap: 2.5rem;
+        border: 1px solid #000000;
+    }
+     
+    .box {
+        width: 20.438rem;
+    }
+
+    .in_img {
+        width: 20.438rem;
+    }
+
+    
+    .pages {
+        width: 20.5rem;
+        grid-template-columns: auto;
+        gap: 3rem;
+        border: 1px solid #000000;
+    }
+    
+    .image-container {
+        height: 15.625rem;
+        width: 20.438rem;
+    }
+    
+    .page1, .page-tab {
+        display: none;
+    }
+    
+    .page-mob {
+        display: inline;
+        height: 15.625rem;
+        width: 20.438rem;
+        border-radius: 15px;
+    }
+    
+    .web {
+        bottom: 11rem;
+        left: -1.5rem;
+    }
+    
+    .web h1 {
+        font-size: 28px;
+    }
+    
 }
