--- a/starter-code/css pages/app-design.css
+++ b/starter-code/css pages/app-design.css
@@ -54,6 +54,10 @@ nav {
     margin: 64.84px auto 5rem auto;
 }
 
+.hamburger {
+    display: none;
+}
+
 .links {
     display: flex;
     width: 370px;
@@ -336,7 +340,7 @@ footer {
     background-color: var(--primary-color-black);
 }
 
-.footer-links a {
+.links-link a {
     text-decoration: none;
     color: var(--primary-color-white);
     padding: 0 18px;
@@ -553,6 +557,14 @@ hr {
         padding: 0 1rem;
     }
 
+    .links {
+        display: none;
+    }
+
+    .links-link {
+        display: none;
+    }
+
     .app-section {
         width: 100%;
         height: 20rem;
@@ -633,5 +645,119 @@ hr {
     .web h1 {
         font-size: 28px;
     }
+    
+    .project-container{
+        width: 327px;
+        height: 379px;
+    }
+    
+    .gig{
+        display: block;
+    }
+    
+    .project{
+        width: 279px;
+        justify-content: center;
+        margin:  0 auto;
+    }
+    
+    .project h2{
+        width: 19.5rem;
+        text-align: center;
+        padding-right: 1rem;
+        margin-top: 2rem;
+        margin-left: -.5rem;
+        font-size: 15px;
+    }
+    
+    .project h1{
+        width: 279px;
+        height: 82px;
+        text-align: center;
+        margin-top: -1.5rem;
+    }
+    
+    /* .get-touch {
+        margin-left: 5rem;
+        top: -1rem;
+        border-radius: .5rem;
+        border: none;
+    } */
+    
+    footer{  
+        width: 100%;
+        height: 866px;
+    }
+    /*
+    nav {
+        display: block;
+        justify-content: center;
+    }
+    /*
+    footer .logo {
+        position: relative;
+        left: 3rem;
+    }
+    .links-link{
+        width: 15rem;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        top: 5rem;
+        left: 6rem;
+        gap: 2rem;
+    }
+    .links-link a{
+        width: 10rem;
+        display: flex;
+        justify-content: center;
+    }
+    hr {
+        position: relative;
+        width: 327px;
+        margin-top: -5rem;
+        left: .5rem;
+    }
+    /* Not needed */
+    /* .foot{ 
+        width: 327px;
+    } 
+    
+    .foot1{
+        width: 327px;
+        height: 498px;
+        display: block;
+        justify-content: center;
+        align-items: center;
+    }
+    .container1{
+        display: block;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+        margin-top: 15rem;
+        margin-left: 3rem;
+        width: 16rem;
+    }
+    .container-direction{
+        display: flex;
+        flex-direction: column;
+        margin-top: 12rem;
+        justify-content: center;
+        align-items: center;  
+    }
+    .container-contact{
+        display: flex;
+        flex-direction: column;
+        margin-top: 2rem;
+        justify-content: center;
+        align-items: center;
+    }
+    .footer-icons{
+        position: relative;
+        left: 3rem;
+    }
+    */
     
 }
